# elastic_sh

./: .drone.yml  Cargo.toml  README.md
elastic/: Cargo.toml
elastic/src/: main.rs
elasticsearch_api/: Cargo.toml
elasticsearch_api/src/: cat.rs  cluster.rs  index.rs  ingest.rs  lib.rs  multi_document.rs  nodes.rs  search.rs
elasticsearch_api/src/cat/: aliases.rs  allocation.rs  count.rs  fielddata.rs  health.rs  indices.rs  master.rs  nodeattrs.rs  nodes.rs  pending_tasks.rs  plugins.rs  recovery.rs  repositories.rs  segments.rs  shards.rs  snapshots.rs  task_management.rs  templates.rs  thread_pool.rs
elasticsearch_api/src/cluster/: allocation_explain.rs  health.rs  pending_tasks.rs  settings.rs  state.rs  stats.rs  voting_config_exclusions.rs
elasticsearch_api/src/index/: alias.rs  aliases.rs  analyze.rs  clear_cache.rs  clone.rs  close.rs  field_mapping.rs  flush.rs  force_merge.rs  management.rs  mapping.rs  open.rs  recovery.rs  refresh.rs  rollover.rs  segments.rs  settings.rs  shard_stores.rs  shrink.rs  split.rs  stats.rs  template.rs
elasticsearch_api/src/ingest/: pipeline.rs  simulate.rs
elasticsearch_api/src/multi_document/: bulk.rs  delete_by_query.rs  mget.rs  reindex.rs  update_by_query.rs
elasticsearch_api/src/nodes/: hot_threads.rs  info.rs  stats.rs  usage.rs
elasticsearch_api/src/search/: api.rs  count.rs  explain.rs  field_caps.rs  msearch.rs  msearch_template.rs  rank_eval.rs  request_body.rs  search_shards.rs  template.rs  uri.rs  validate.rs
elasticsearch_api/src/single_document/: index.rs  update.rs
