[package]
name = "elasticsearch_api"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
reqwest = { version = "0.10.4", features = ["blocking"] }
# http = "0.2.1"
serde = { version = "1.0.106", features = ["derive"] }
# serde_json = "1.0.51"

[dev-dependencies]
tokio = { version = "0.2.18", features = ["macros"] }
reqwest = { version = "0.10.4", features = ["json"] }
